Fix: fixed swiper scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,6 @@ header {
   position: relative;
   position: sticky;
   top: -44px;
-  /* top: 44px; */
-  /* position: fixed; */
   width: 100%;
   z-index: 99;
   transition: top 0.2s ease-in-out;
@@ -215,13 +213,11 @@ header {
 
 /* best item */
 .best-item .swiper {
-  margin-bottom: 80px;
-  width: 100%;
+  margin: 0 80px 40px;
+  overflow-x: unset;
 }
 
 .best-item .swiper-wrapper {
-  padding-left: 48px;
-  padding-right: 48px;
   position: relative;
 }
 
@@ -261,7 +257,6 @@ header {
 }
 
 .swiper-scrollbar.swiper-scrollbar-horizontal {
-  margin-left:80px;
   height: 2px;
   width: 100%;
 }
@@ -284,10 +279,10 @@ header {
 }
 
 .swiper-btn-prev {
-  left: -80px;
+  left: -160px;
 }
 .swiper-btn-next {
-  right: -80px;
+  right: -160px;
 }
 
 .swiper:hover .swiper-btn-prev{
@@ -336,6 +331,11 @@ width: fit-content;
   color: #666;
 }
 
+.grid-skin-type .material-symbols-outlined {
+  position: absolute;
+  margin-left: 5px;
+}
+
 .grid-skin-type .item-name::after {
   content: "";
   display: block;
@@ -350,8 +350,6 @@ width: fit-content;
 .grid-skin-type .grid-item:hover .item-name:after {
   transform: scaleX(1);
 }
-
-
 
 .find-skin-type {
   color: #fffef2;
@@ -368,9 +366,6 @@ width: fit-content;
   transform: translateY(-50%);
   left: 8%;
 }
-
-
-
 
 .find-skin-type .section-sub-title {
   font-size: 30px;
@@ -563,6 +558,8 @@ width: fit-content;
   margin: 15px 0;
   font-weight: 700;
 }
+
+/* footer */
 
 footer {
   color: #fffef2;
